--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <footer>
         <input type="text" placeholder="Escreva aqui..." name="Mensagem">
-        <img src="imgs/paper-plane.svg" alt="enviar mensagem">
+        <img src="imgs/paper-plane.svg" alt="enviar mensagem" onclick="pickUpInputMessages()">
     </footer>
 
     <!-- Arquivo JS -->
