--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bate-Papo UOL</title>
 
-    <!-- Arquivos CSS -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
@@ -15,7 +14,6 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/side-menu.css">
 
-    <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -30,9 +28,10 @@
 
     <div class="pagina">
         <main>
-
         </main>
     </div>
+
+    <div class="teste"></div>
 
     <aside class="side-menu-all">
         <div class="side-menu-background" onclick="closeSideMenu()"></div>
@@ -44,10 +43,8 @@
         <img src="imgs/paper-plane.svg" alt="enviar mensagem" onclick="pickUpInputMessages()">
     </footer>
 
-    <!-- Arquivo JS -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
-    
+    <script src="script.js"></script>    
 </body>
 
 </html>
