os usuarios onlines aparecem no side menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <aside class="side-menu-all">
         <div class="side-menu-background" onclick="closeSideMenu()"></div>
-        <div class="side-menu"></div>
+        <div class="side-menu">
+        </div>
     </aside>
 
     <footer>
