Seleciona o destinatario mostra as mensagens reservadas e exibi o destinatario

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <footer>
         <input type="text" placeholder="Escreva aqui..." name="Mensagem">
         <img src="imgs/paper-plane.svg" alt="enviar mensagem" onclick="pickUpInputMessages()">
+        <div class="recipient"></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
