--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/side-menu.css">
+    <link rel="stylesheet" href="css/initial-page.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +32,6 @@
         </main>
     </div>
 
-    <div class="teste"></div>
 
     <aside class="side-menu-all">
         <div class="side-menu-background" onclick="closeSideMenu()"></div>
@@ -46,7 +46,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>    
+    <script src="script.js"></script>
 </body>
 
 </html>
