ajustes de correçãp automatica

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <footer>
         <input type="text" placeholder="Escreva aqui..." name="Mensagem">
-        <img src="imgs/paper-plane.svg" alt="enviar mensagem" onclick="pickUpInputMessages()">
+        <img src="imgs/paper-plane.svg" alt="enviar mensagem" data-identifier="send-message" onclick="pickUpInputMessages()">
         <div class="recipient"></div>
     </footer>
 
